# moshi-connect

./: .gitignore  README.md  TODO  installer.iss  moshi-connect-bundle.spec  pyproject.toml
.github/workflows/: release.yml
scripts/: build_dist.py  build_installer.py  build_openconnect.py  build_openconnect.sh  build_win_installer.py  download_openconnect.py  download_openconnect_gui.py  download_openconnect_gui_release.py  install_openconnect_deps.sh  png_to_ico.py
scripts/common/: gitlab_downloader.py  http_downloader.py  windows_installer_extractor.py
src/: main.py  standalone_service.py  windows_service.py
src/common/: app_setup.py  logging_config.py
src/config/: app_settings.py  constants.py  vpn_profiles.py
src/cookie/: cookies.py  firefox_cookies.py
src/ipc/: __init__.py  json_message.py  service_client.py  service_interface.py  vpn_connect_interface.py
src/service/: openconnect_finder.py  route_manager.py  service_impl.py  service_runner.py  vpn_connect_manager_impl.py  windows_pipe_server.py
src/ui/: gui_logging.py  gui_main.py  log_display_widget.py  profile_dialog.py  system_tray.py  vpn_workers.py
src/utils/: subprocess_logger.py
tests/: test_interface_parsing.py  test_subprocess_logger.py  test_vpn_service_client_disconnect.py
